--- a/superadmin/templates/superadmin/base.html
+++ b/superadmin/templates/superadmin/base.html
@@ -109,7 +109,7 @@
                             <span class="material-symbols-outlined">person_add</span>
                             Onboard School Admins
                         </a>
-                        <a href="program-coordinator-list.html" id="nav-program-coordinators">
+                        <a href="{% url 'coordinator_list' %}" id="nav-program-coordinators">
                             <span class="material-symbols-outlined">supervisor_account</span>
                             Program Coordinators
                         </a>
