Fix css style location

--- a/teacher/templates/teacher/add-lesson.html
+++ b/teacher/templates/teacher/add-lesson.html
@@ -4,7 +4,7 @@
 {% block title %}Create Lesson - Thinking Coach{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/school_admin/add-lessons.css' %}">
+<link rel="stylesheet" href="{% static 'css/teacher/add-lessons.css' %}">
 {% endblock %}
 
 {% block content %}
