--- a/teacher/templates/teacher/lesson-library.html
+++ b/teacher/templates/teacher/lesson-library.html
@@ -5,7 +5,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
-<link rel="stylesheet" href="{% static 'css/school_admin/lesson-list.css' %}">
+<link rel="stylesheet" href="{% static 'css/teacher/lesson-list.css' %}">
 {% endblock %}
 
 {% block content %}
