--- a/teacher/templates/teacher/view-lesson.html
+++ b/teacher/templates/teacher/view-lesson.html
@@ -4,7 +4,7 @@
 {% block title %}View Lesson - Thinking Coach{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/school_admin/add-lessons.css' %}">
+<link rel="stylesheet" href="{% static 'css/teacher/add-lessons.css' %}">
 <style>
     /* View mode specific styles */
     .al-form-control[readonly],
