Added all the dashboards

--- a/static/css/superadmin/sup-admin-dash.css
+++ b/static/css/superadmin/sup-admin-dash.css
@@ -243,6 +243,8 @@ body {
 .stat-change .material-symbols-outlined {
     font-size: 1rem;
     line-height: 1;
+    display: flex;
+    align-items: center;
 }
 
 /* Card Styles */
